Fixed issue where there was a little bit of horizontal scroll on mobile devices

--- a/css/hanjunme.css
+++ b/css/hanjunme.css
@@ -315,8 +315,18 @@ body {
 }
 
 .navbar-inner {
- margin: -20px;
+ margin-top: -20px;
+ margin-bottom: -20px;
 }
+
+.navbar .brand {
+ margin-left: -20px;
+}
+
+.navbar .btn-navbar {
+	margin-right: -20px;
+}
+
 .carousel {
  visibility:collapse;
  margin-left: -20px;
